--- a/index.css
+++ b/index.css
@@ -7,3 +7,18 @@ p{
     background-color: gray;
     color: white;
 }
+.yoyo{
+    background-color: blue;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    }
+
+.yoyo p{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
